# angry-birds-clone-assignment-srguts

./: .gitignore  CMakeLists.txt
assets/Ang_Birds/: BlackBird.psd  Thumbs.db
include/: Bird.h  BlackBird.h  DynamicObject.h  GameObject.h  Pig.h  RedBird.h  Slingshot.h  StaticObject.h  YellowBird.h
src/: Bird.cpp  BlackBird.cpp  Pig.cpp  RedBird.cpp  Slingshot.cpp  YellowBird.cpp  main.cpp
test_src/: RunTests.cpp
